# Light3DGSRenderer

./: CMakeLists.txt  README.md
Tools/include/: Shader.h
Tools/src/: Shader.cpp
shaders/chap01/: shader.frag  shader.vert
src/: main.cpp
